--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ override.tf.json
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 
+account.json
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
